# ketchup

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ketchup/: __init__.py  cli.py  ketchup.py
tests/: __init__.py  test_ketchup.py
